--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -502,6 +502,15 @@ a:hover { color: @primaryColor; text-decoration: none }
     }
 }
 
+.widget-random-user {
+    padding: 10px;
+    a { display: block; text-align: center; }
+    .image { 
+        text-align: center;
+        img { max-width: 90%; max-height: 240px; }
+    }
+}
+
 .page-friends {
     .clearfix();
     .friend {
