--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -568,6 +568,7 @@ a:hover { color: @primaryColor; text-decoration: none }
 .page-teams-show {
     .lineup {
         li { margin: 20px 0px; padding: 20px 0px; background-color: @dark; }
+        h3 { margin-top: 0px; }
         img { max-width: 180px; max-height: 240px; }
     }
     .matches {
