--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -18,8 +18,8 @@
 @red: #ff4000;
 @green: #00ff4e;
 @orange: #ffa800;
-@dark: #202427;
-@darker: #111214;
+@dark: #292929;
+@darker: #202020;
 @darkest: #090a0c;
 
 /* Text selection */
@@ -228,8 +228,8 @@ a:hover { color: @primaryColor; text-decoration: none }
 }
 .page-news-show-stream {
     .item { float: left; margin-bottom: 10px; background-color: @dark; box-sizing: border-box; width: 50%; padding: 20px; transition: all 0.5s; }
-    .item:nth-child(even) { border-left: 5px solid black; }
-    .item:nth-child(odd) { border-right: 5px solid black; }
+    .item:nth-of-type(even) { border-left: 5px solid @darker; }
+    .item:nth-of-type(odd) { border-right: 5px solid @darker; }
     .item.new {  transform: scale(0.9); }
     .image { display: block; height: 200px; background-size: cover; background-position: center; }
     h2 { width: 100%; .text-overflow(); }
