--- a/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
@@ -307,6 +307,7 @@ a:hover { color: @primaryColor; text-decoration: none }
 }
 
 .widget-galleries {
+    ul { font-size: 0; /* ignore white space */ }
     li { width: 20%; height: 100px }
     .item { 
         display: block; width: 100%; height: 100%;
