--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -101,7 +101,7 @@ h2.section { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: bold }
 
 /* Search-Box */
 .model-search-box input[type=text] { 
-    .form-control(); display: inline-block; max-width: 170px; .background-image('theme/searchbox_bg.png'); background-position: 10px center; background-repeat: no-repeat; text-indent: 20px;
+    .form-control(); display: inline-block; max-width: 170px; .background-image('img/default/searchbox_bg.png'); background-position: 10px center; background-repeat: no-repeat; text-indent: 20px;
     &:focus { .focus() }
 }
 .model-search-box input[type=submit] { vertical-align: inherit; }
