--- a/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
@@ -95,7 +95,7 @@ a:hover { color: @primaryColor; text-decoration: none }
         border-bottom: 2px solid @primaryColor;
         border-radius: 1px;
         color: @textColor;
-        &:focus { box-shadow: none !important; }
+        &:focus { border-color: lighten(@primaryColor, 10%); box-shadow: none !important; }
     }
     textarea { height: auto }
 }
