--- a/app/Modules/PhobosTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/PhobosTheme/Resources/Assets/less/frontend.less
@@ -660,7 +660,7 @@ th, td { border-color: lighten(@dark, 10%) !important; border-width: 2px !import
 .nav-tabs a:hover { background-color: @dark !important }
 
 #header { 
-    position: absolute; z-index: 2; width: 100%; background-color: rgba(0, 0, 0, 0.5);
+    position: relative; z-index: 2; width: 100%; background-color: rgba(0, 0, 0, 0.5);
     .top-bar { 
         position: relative; height: 80px;
         .header-logo { 
