--- a/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
@@ -663,6 +663,10 @@ th, td { border-color: lighten(@dark, 10%) !important; border-width: 2px !import
 }
 
 #header { 
+
+    position: relative;
+    z-index: 1;
+
     .top-bar { 
         height: 80px; padding: 25px 0px;
         .header-logo { margin: 0px 20px }
